HTTP download fix, UdpcastService bug fix